--- a/definitions/EiffelArtifactCreatedEvent/4.0.0.yml
+++ b/definitions/EiffelArtifactCreatedEvent/4.0.0.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
-$schema: https://json-schema.org/draft/draft-2020-12/schema#
+$schema: https://json-schema.org/draft/2020-12/schema#
 _name: EiffelArtifactCreatedEvent
 _version: 4.0.0
 _abbrev: ArtC
@@ -215,7 +215,7 @@ _links:
         - EiffelArtifactCreatedEvent
 _history:
   - version: 4.0.0
-    changes: Update meta schema to Draft 2020-12.
+    changes: Update meta schema to Draft 2020-12 and add link validation.
   - version: 3.3.0
     introduced_in: edition-arica
     changes: Added data.fileInformation.integrityProtection member (see [Issue 290](https://github.com/eiffel-community/eiffel/issues/290)).
