--- a/definitions/EiffelSourceChangeSubmittedEvent/4.0.0.yml
+++ b/definitions/EiffelSourceChangeSubmittedEvent/4.0.0.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
-$schema: https://json-schema.org/draft/draft-2020-12/schema#
+$schema: https://json-schema.org/draft/2020-12/schema#
 _name: EiffelSourceChangeSubmittedEvent
 _version: 4.0.0
 _abbrev: SCS
@@ -205,7 +205,7 @@ _links:
         - EiffelSourceChangeSubmittedEvent
 _history:
   - version: 4.0.0
-    changes: Update meta schema to Draft 2020-12.
+    changes: Update meta schema to Draft 2020-12 and add link validation.
   - version: 3.2.0
     introduced_in: edition-arica
     changes: Add schema URL to the meta object (see [Issue 280](https://github.com/eiffel-community/eiffel/issues/280)).
