--- a/definitions/EiffelActivityTriggeredEvent/5.0.0.yml
+++ b/definitions/EiffelActivityTriggeredEvent/5.0.0.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
-$schema: https://json-schema.org/draft/draft-2020-12/schema#
+$schema: https://json-schema.org/draft/2020-12/schema#
 _name: EiffelActivityTriggeredEvent
 _version: 5.0.0
 _abbrev: ActT
@@ -156,7 +156,7 @@ _links:
         - EiffelActivityTriggeredEvent
 _history:
   - version: 5.0.0
-    changes: Update meta schema to Draft 2020-12.
+    changes: Update meta schema to Draft 2020-12 and add link validation.
   - version: 4.3.0
     introduced_in: edition-orizaba
     changes: Add ORIGINAL_TRIGGER link (see [Issue 246](https://github.com/eiffel-community/eiffel/issues/246)).
