--- a/definitions/EiffelArtifactDeployedEvent/0.2.0.yml
+++ b/definitions/EiffelArtifactDeployedEvent/0.2.0.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
-$schema: https://json-schema.org/draft/draft-2020-12/schema#
+$schema: https://json-schema.org/draft/2020-12/schema#
 _name: EiffelArtifactDeployedEvent
 _version: 0.2.0
 _abbrev: ArtD
@@ -122,7 +122,7 @@ _links:
         - EiffelFlowContextDefinedEvent
 _history:
   - version: 0.2.0
-    changes: Update meta schema to Draft 2020-12.
+    changes: Update meta schema to Draft 2020-12 and add link validation.
   - version: 0.1.0
     introduced_in: edition-orizaba
     changes: Initial version.
