--- a/definitions/EiffelConfidenceLevelModifiedEvent/4.0.0.yml
+++ b/definitions/EiffelConfidenceLevelModifiedEvent/4.0.0.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
-$schema: https://json-schema.org/draft/draft-2020-12/schema#
+$schema: https://json-schema.org/draft/2020-12/schema#
 _name: EiffelConfidenceLevelModifiedEvent
 _version: 4.0.0
 _abbrev: CLM
@@ -161,7 +161,7 @@ _links:
         - EiffelConfidenceLevelModifiedEvent
 _history:
   - version: 4.0.0
-    changes: Update meta schema to Draft 2020-12.
+    changes: Update meta schema to Draft 2020-12 and add link validation.
   - version: 3.4.0
     changes: Add CONFIDENCE_BASIS link (see [Issue 323](https://github.com/eiffel-community/eiffel/issues/323)).
   - version: 3.3.0
