--- a/definitions/EiffelTestSuiteStartedEvent/4.0.0.yml
+++ b/definitions/EiffelTestSuiteStartedEvent/4.0.0.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
-$schema: https://json-schema.org/draft/draft-2020-12/schema#
+$schema: https://json-schema.org/draft/2020-12/schema#
 _name: EiffelTestSuiteStartedEvent
 _version: 4.0.0
 _abbrev: TSS
@@ -185,7 +185,7 @@ _links:
         - EiffelTestExecutionRecipeCollectionCreatedEvent
 _history:
   - version: 4.0.0
-    changes: Update meta schema to Draft 2020-12.
+    changes: Update meta schema to Draft 2020-12 and add link validation.
   - version: 3.4.0
     introduced_in: edition-orizaba
     changes: Add ORIGINAL_TRIGGER link (see [Issue 246](https://github.com/eiffel-community/eiffel/issues/246)).
